Include `tasks` in the `ecdsa` package
This commit/PR adds the `tasks` folder to the list of files published in the NPM
package, so that the tasks could be used by other projects. Modification of the
content of the folder (on merge to `main` will trigger a job publishing new
package.

--- a/.github/workflows/npm-ecdsa.yml
+++ b/.github/workflows/npm-ecdsa.yml
@@ -7,6 +7,7 @@ on:
     paths:
       - "solidity/ecdsa/contracts/**"
       - "solidity/ecdsa/deploy/**"
+      - "solidity/ecdsa/tasks/**"
       - "solidity/ecdsa/hardhat.config.ts"
       - "solidity/ecdsa/package.json"
       - "solidity/ecdsa/yarn.lock"
