Configure only public address in announced addresses
The nodes shouldn't configure an internal address for announced
addresses as the address is not rechable and is considered incorrect
configuration for the network. We configure the announced addresses
only if we want to expose a DNS address for a bootstrap nodes. The rest
of nodes is resolving the addresses with libp2p to the public addresses
correctly by default.

--- a/infrastructure/kube/keep-test/keep-client/gen/template.yaml
+++ b/infrastructure/kube/keep-test/keep-client/gen/template.yaml
@@ -16,14 +16,6 @@ network: goerli
 #@ def account():
 #@   return "account-" + str(client.id)
 #@ end
-
-#@ def announcedAddresses():
-#@   result = "/dns4/" + name() + ".default.svc.cluster.local/tcp/3919"
-#@   if client.publicAnnouncedAddress:
-#@     result += ",/dns4/" + client.publicAnnouncedAddress + "/tcp/3919"
-#@   end
-#@   return result
-#@ end
 ---
 apiVersion: apps/v1
 kind: StatefulSet
@@ -100,8 +92,10 @@ spec:
             - "/mnt/keep-client/data"
             - "--network.port"
             - "3919"
+            #@ if client.publicAnnouncedAddress:
             - "--network.announcedAddresses"
-            -  #@ announcedAddresses()
+            -  #@ "/dns4/" + client.publicAnnouncedAddress + "/tcp/3919"
+            #@ end
             #@ if client.networkPeers:
             - "--network.peers"
             -  #@ client.networkPeers
