--- a/infrastructure/kube/keep-test/keep-client/gen/data.yaml
+++ b/infrastructure/kube/keep-test/keep-client/gen/data.yaml
@@ -14,16 +14,16 @@ clients:
     networkPeers: /dns4/keep-client-2.default.svc.cluster.local/tcp/3919/ipfs/16Uiu2HAmNNuCp45z5bgB8KiTHv1vHTNAVbBgxxtTFGAndageo9Dp
   - id: 4
     networkPeers: /dns4/keep-client-3.default.svc.cluster.local/tcp/3919/ipfs/16Uiu2HAm8KJX32kr3eYUhDuzwTucSfAfspnjnXNf9veVhB12t6Vf
-#! - id: 5
-#!   networkPeers: /dns4/keep-client-4.default.svc.cluster.local/tcp/3919/ipfs/16Uiu2HAkxRTeySEWZfW9C83GPFpQUXvrygmZryCN6DL4piZrbAv4
-#! - id: 6
-#!   networkPeers: /dns4/keep-client-5.default.svc.cluster.local/tcp/3919/ipfs/16Uiu2HAm7Vq3Xf8xnSQDyj2j3AAEDjJk9Hp1RemTXNKmQwHm8cFt
-#! - id: 7
-#!   networkPeers: /dns4/keep-client-6.default.svc.cluster.local/tcp/3919/ipfs/16Uiu2HAmNT1E8Hepthx6sgoHXb7WDpCk9ecPTN7J1FvaD76SvvPG
-#! - id: 8
-#!   networkPeers: /dns4/keep-client-7.default.svc.cluster.local/tcp/3919/ipfs/16Uiu2HAmNnbEQy4wi9KNoyoGh3nZy5urkbf5oUKrw69XmVrKeowd
-#! - id: 9
-#!   networkPeers: /dns4/keep-client-8.default.svc.cluster.local/tcp/3919/ipfs/16Uiu2HAmCJ9iupUiWed9NmpsPG7W2EiccEceuDrKZuQe7mkyAQxv
+  - id: 5
+    networkPeers: /dns4/keep-client-4.default.svc.cluster.local/tcp/3919/ipfs/16Uiu2HAkxRTeySEWZfW9C83GPFpQUXvrygmZryCN6DL4piZrbAv4
+  - id: 6
+    networkPeers: /dns4/keep-client-5.default.svc.cluster.local/tcp/3919/ipfs/16Uiu2HAm7Vq3Xf8xnSQDyj2j3AAEDjJk9Hp1RemTXNKmQwHm8cFt
+  - id: 7
+    networkPeers: /dns4/keep-client-6.default.svc.cluster.local/tcp/3919/ipfs/16Uiu2HAmNT1E8Hepthx6sgoHXb7WDpCk9ecPTN7J1FvaD76SvvPG
+  - id: 8
+    networkPeers: /dns4/keep-client-7.default.svc.cluster.local/tcp/3919/ipfs/16Uiu2HAmNnbEQy4wi9KNoyoGh3nZy5urkbf5oUKrw69XmVrKeowd
+  - id: 9
+    networkPeers: /dns4/keep-client-8.default.svc.cluster.local/tcp/3919/ipfs/16Uiu2HAmCJ9iupUiWed9NmpsPG7W2EiccEceuDrKZuQe7mkyAQxv
 initContainers:
   - name: initcontainer-beacon
     image: gcr.io/keep-test-f3e0/keep-random-beacon-hardhat:latest
