--- a/infrastructure/kube/keep-test/monitoring/prometheus-configmap.yaml
+++ b/infrastructure/kube/keep-test/monitoring/prometheus-configmap.yaml
@@ -27,45 +27,70 @@ data:
   prometheus.yml: |-
     global:
       scrape_interval: 5s
+      scrape_timeout: 5s
       evaluation_interval: 5s
-    rule_files:
-      - /etc/prometheus/prometheus.rules
     alerting:
       alertmanagers:
-      - scheme: http
+        - follow_redirects: true
+          enable_http2: true
+          scheme: http
+          timeout: 10s
+          api_version: v2
         static_configs:
         - targets:
-          - "alertmanager.monitoring.svc:9093"
-
+                - alertmanager.monitoring.svc:9093
+    rule_files:
+      - /etc/prometheus/prometheus.rules
     scrape_configs:
-    - job_name: external-clients
-      metrics_path: /metrics
-      scheme: http
-      file_sd_configs:
-        - files:
-            - 'external-clients-targets.yml'
-    - job_name: internal-clients
-      honor_timestamps: true
-      metrics_path: /metrics
-      scheme: http
-      follow_redirects: true
-      enable_http2: true
-      kubernetes_sd_configs:
-      - role: service
+      - job_name: keep-discovered-nodes
+        metrics_path: /metrics
+        scheme: http
+        file_sd_configs:
+          - files:
+                - "/etc/prometheus/sd/keep-sd.json"
+          relabel_configs:
+            - source_labels: [__meta_chain_address]
+              action: replace
+              target_label: chain_address
+            - source_labels: [__meta_network_id]
+              action: replace
+              target_label: network_id
+        - job_name: keep-external-nodes
+        honor_timestamps: true
+          scrape_interval: 5s
+          scrape_timeout: 5s
+        metrics_path: /metrics
+        scheme: http
         follow_redirects: true
         enable_http2: true
-        namespaces:
-          names:
-          - default
-        selectors:
+        file_sd_configs:
+          - files:
+                - /etc/prometheus/external-clients-targets.yml
+              refresh_interval: 5m
+      - job_name: keep-internal-nodes
+        honor_timestamps: true
+          scrape_interval: 5s
+          scrape_timeout: 5s
+        metrics_path: /metrics
+        scheme: http
+        follow_redirects: true
+        enable_http2: true
+          relabel_configs:
+            - source_labels: [__meta_kubernetes_service_port_name]
+              separator: ;
+              regex: metrics
+              replacement: $1
+              action: keep
+        kubernetes_sd_configs:
         - role: service
-          label: "app=keep"
-      relabel_configs:
-      - source_labels: [__meta_kubernetes_service_port_name]
-        separator: ;
-        regex: metrics
-        replacement: $1
-        action: keep
+          follow_redirects: true
+          enable_http2: true
+          namespaces:
+            names:
+            - default
+          selectors:
+          - role: service
+            label: app=keep
     - job_name: node-exporter
       honor_timestamps: true
       scrape_interval: 5s
